Improved mail filters with support for Dovecot and Postfix policyd

--- a/mail.conf
+++ b/mail.conf
@@ -38,8 +38,20 @@ filter {
 
     grok {
       patterns_dir => "/home/wido/logstash/patterns"
-      match => [ "message", "%{POSTFIXVIRTUAL}" ]
-      add_tag => ["vhosting_mail", "postfix_virtual"]
+      match => [ "message", "%{POSTFIXRELAY}" ]
+      add_tag => ["vhosting_mail", "postfix_relay"]
+    }
+
+    grok {
+      patterns_dir => "/home/wido/logstash/patterns"
+      match => [ "message", "%{POSTFIXPOLICY}" ]
+      add_tag => ["vhosting_mail", "postfix_policy"]
+    }
+
+    grok {
+      patterns_dir => "/home/wido/logstash/patterns"
+      match => [ "message", "%{DOVECOT}" ]
+      add_tag => ["vhosting_mail", "dovecot"]
     }
 
     if "vhosting_mail" not in [tags] {
@@ -55,15 +67,18 @@ filter {
           }
         }
       }
-
-      mutate {
-        remove_tag => ["_grokparsefailure"]
-      }
     }
 
-    date {
-      timezone => "Europe/Amsterdam"
-      match => ["timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601"]
+    if "vhosting_mail" in [tags] {
+      mutate {
+        remove_tag => ["_grokparsefailure"]
+        remove_field => ["timestamp"]
+      }
+
+      date {
+        timezone => "Europe/Amsterdam"
+        match => ["timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601"]
+      }
     }
   }
 }
